tpa system overhaul - v1.0.12